# code-unc

./: .gitignore  LICENSE  README.md  SETUP-QUICK.md  prompt_txt.txt  pyproject.toml  requirements.txt
.github/workflows/: code-review.yml
configs/: default.yaml
configs/prompts/: performance.txt  review.txt  security.txt
docs/: DOCUMENTATION.md  README.md  ai-providers.md  commands.md  configuration.md  contributing.md  examples.md  focus-areas.md  github-action-setup.md  github-integration.md  installation.md  output-formats.md  publishing.md  quick-start.md  troubleshooting.md
src/code_review_cli/: __init__.py  __main__.py
src/code_review_cli/cli/: __init__.py  main.py
src/code_review_cli/cli/commands/: __init__.py  config.py  history.py  review.py
src/code_review_cli/core/ai/: __init__.py  anthropic.py  client.py  gemini.py  mistral.py  ollama.py  openai.py  prompts.py
src/code_review_cli/core/cache/: __init__.py  manager.py  storage.py
src/code_review_cli/core/config/: __init__.py  defaults.py  manager.py
src/code_review_cli/core/git/: __init__.py  differ.py  files.py  parser.py
src/code_review_cli/core/history/: __init__.py  storage.py
src/code_review_cli/core/output/: __init__.py  console.py  formatter.py  templates.py
src/code_review_cli/models/: __init__.py  config.py  diff.py  issue.py  review.py
